# ASTRA

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  calibration_strategy_report.md  coordinate_audit_v2.md  dataset_fingerprint.md  ground_truth_attention.md  ground_truth_bls_audit.md  ground_truth_checkpoint_audit.md  ground_truth_metrics.md  ground_truth_reproducibility.md  ground_truth_uncertainty.md  phase6_test_ids.json  phase6_val_ids.json  phase7_array_integrity.md  phase7_benchmark_report.md  phase7_checkpoint_compatibility.md  phase7_metadata_consistency.md  phase7_model_sanity_check.md  phase7_period_balance.md  phase7_round1_results.md  phase7_training_gate.md  phase8_api_audit.md  phase8_explainability_audit.md  phase8_inference_audit.md  phase8_osint_audit.md  pyproject.toml  render.yaml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
astra-platform/: Dockerfile  README.md  next.config.ts  package.json
astra-platform/data/: astra.sqlite  best_star_transformer_shared.onnx  best_star_transformer_shared_explain.onnx  scientific_dataset_freeze_v2.csv
data/: catalog_full.json  dataset_summary.json  labels.py
docs/: api_reference.md  architecture.md  dataset.md  experiments.md  index.md  repository_health.md  reproducibility.md
docs/engineering-log/: coordinate_review_report.md  dataset_freeze_report.md  ground_truth_calibration.md  ground_truth_dataset_audit.md  ground_truth_final_verdict.md  ground_truth_split_audit.md  (+18 more)
pipeline/: __init__.py  batch_process.py  build_catalog.py  candidate_expander.py  check_tess_iterative.py  check_tess_iterative_reverse.py  check_tess_parallel.py  cleanup_data.py  dataset_audit.py  dataset_builder.py  download_manager.py  freeze_phase6_splits.py  phase6_batch_process.py  phase6_utils.py  preprocess.py  run_phase6a_expansion.py  stable_screen.py  variability_crosscheck.py
tests/: test_phase6_pipeline.py
training/: calibration.py  cross_validate.py  dataset.py  explain_inference.py  export_explainability_model.py  export_model.py  focal_loss.py  freeze_split.py  inference_consistency.py  predict.py  predict_inference.py  run_experiment.py  stress_test.py  train_cnn.py  train_transformer.py  uncertainty.py  upload_inference.py  visualize_attention.py
(+4814 files in other folders)
