[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "astra-stellar"
version = "1.0.0"
description = "Automated Stellar Transient Recognition & Analysis — TESS variable star classification pipeline"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Soumyadeb Tripathy"}
]
keywords = [
    "astronomy",
    "astrophysics",
    "stellar variability",
    "TESS",
    "machine learning",
    "deep learning",
    "transformer",
    "CNN",
    "variable stars",
    "time series classification",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS",
]
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "astropy>=5.3",
    "lightkurve>=2.4",
    "astroquery>=0.4.6",
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/soumyadebtripathy/ASTRA"
Repository = "https://github.com/soumyadebtripathy/ASTRA"
Documentation = "https://github.com/soumyadebtripathy/ASTRA/tree/main/docs"
"Bug Tracker" = "https://github.com/soumyadebtripathy/ASTRA/issues"
Changelog = "https://github.com/soumyadebtripathy/ASTRA/blob/main/CHANGELOG.md"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = ["E501", "E402", "N806", "N812", "F841", "N818", "E701"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "F811"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["pipeline", "training", "data"]
omit = ["*/tests/*", "*/__pycache__/*", "*/_smoke*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
